cmake_minimum_required(VERSION 3.11)

# get the google test framework
#find_package(GTEST REQUIRED)

#file(GLOB all_tests /*.h /*.cc)

# build all unit tests
# TODO av automatically run the tests on build of engine
#add_executable(all_unit_tests src/*.cc include/*.h)
#target_link_libraries(all_unit_tests PRIVATE )
#target_compile_definitions(all_unit_tests $<$<CXX_COMPILER_ID:MSVC>:/MP>)
